# NinjaSpam

./: .replit  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  english-only.md  fun-data-location.md  td001-inmemory-to-db.md
Ninja/: config.py  requirements.txt
Ninja/alembic/: env.py
Ninja/core/: fun_data.py  game_wallet.py  i18n.py  spam_bayes.py
Ninja/database/: models.py  models_extra.py  payment_models.py
Ninja/economy/: __init__.py  heist.py  helpers.py  loans.py  models.py  plugin.py
Ninja/locales/: strings.py
Ninja/plugins/: account.py  account_age.py  anti_duplicate.py  anti_forward.py  anti_nsfw.py  antiastro.py  antispam_panel.py  appeals.py  bans.py  broadcast.py  captcha.py  cas_check.py  castle_game.py  channel_protect.py  channel_sub.py  chatbot.py  clean_blue.py  currency.py  dev_cmds.py  economy.py  eval_cmd.py  farm_game.py  federation.py  fun.py  fuzzy_commands.py  global_bans.py  global_ignore.py  group_tools.py  health.py  help_menu.py  homoglyph.py  json_cmd.py  lang_filter.py  locks.py  misc.py  muting.py  name_ban.py  nightmode.py  ninja_game.py  notes.py  (+17 more)
attached_assets/: Pasted-The-repository-already-contains-working-code-Your-first_1781010840216.txt
docs/: ARCHITECTURAL_DECISIONS.md  ARCHITECTURE.md  BOT_UX_RULES.md  DECISION_FRAMEWORK.md  DESIGN_PRINCIPLES.md  DEVELOPER_GUIDE.md  FEATURES.md  LIVING_PROJECT_LOG.md  MENU_TREE.md  PROJECT_GLOSSARY.md  PROJECT_GOVERNANCE_PROMPT.md  PROJECT_VISION.md
tgbot/: .env.example  .gitignore  alembic.ini  config.py  elevated_users.json  main.py  requirements.txt
(+133 files in other folders)
