[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.20.0",
    "asyncpg==0.29.0",
    "cachetools==5.3.3",
    "humanize==4.9.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "python-telegram-bot[job-queue]==20.7",
    "sqlalchemy[asyncio]==2.0.30",
]
