[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.5",
    "aiosqlite==0.20.0",
    "asyncpg==0.29.0",
    "cachetools==5.3.3",
    "feedparser==6.0.11",
    "humanize==4.9.0",
    "nest-asyncio==1.6.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
    "python-dotenv==1.0.1",
    "python-telegram-bot[job-queue]==20.7",
    "pytz==2024.1",
    "sqlalchemy[asyncio]==2.0.30",
]
